# OMNI-LOG

./: .gitignore  README.md  demo.py  pyproject.toml  verify_module1.py
docs/: data.md  engine.md  presentation.md
docs/architecture/: architecture.md
docs/module/: chunker.md  monitor.md  siamese.md
docs/results/: evaluation.md  preprocessing.md  theory.md  training.md
src/features/chunker/: model.py  train.py
src/features/data/: constants.py  loader.py  processor.py  rule_parser.py
src/features/engine/: batch_config.py  pipeline.py  stream_handler.py
src/features/monitor/: metrics.py  mlflow_utils.py
src/features/siamese/: encoder.py  hybrid_logic.py  resolver.py  train_siamese.py
src/main/: main.py  run_pipeline.py
src/main/config/: config.yaml
tests/integration/: test_end_to_end.py
tests/unit/chunker/: test_model.py
tests/unit/data/: verify_data_pipeline.py
tests/unit/engine/: test_batch_config.py  test_pipeline.py  test_stream.py
tests/unit/monitor/: test_metrics.py
tests/unit/siamese/: test_encoder.py  test_hybrid.py  test_resolver.py
