[project]
name = "omni-log"
version = "1.0.0"
description = "OMNI-LOG is a cross-domain NLP pipeline for structuring system logs into standardized JSON using BiLSTM-CRF and Siamese networks."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
"torch>=2.0.0",
"torchcrf>=1.1.0",
"numpy>=1.23.0",
"pandas>=1.5.0",
"scikit-learn>=1.2.0",
"mlflow>=2.0.0",
"dvc>=3.0.0",
"tqdm>=4.65.0"
]

[project.optional-dependencies]

dev = [
"pytest>=7.0.0",
"black>=23.0.0",
"flake8>=6.0.0",
"ipykernel>=6.0.0"
]

viz = [
"matplotlib>=3.7.0",
"seaborn>=0.12.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
